Prevent grid space shifting upon click
Previously, the grid spaces/cells shifted when marked, because of the
flexbox layout. This commit adjusts the flex-auto value in order to
prevent the buttons from shifting after the player clicks on it.

--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ body {
 }
 
 .game-grid-row > * {
-    flex: auto;
+    flex: 1 1 30%;
     height: 6rem;
     color: #C9CCC9;
     background-color: #699F8C;
